# gmerlin

./: ChangeLog  Makefile.am  README  README.gavftools  acinclude.m4  configure.ac  get_js_vars.sh  gmerlin.pc.in  out.txt
apps/: Makefile.am
apps/cmdlineplayer/: Makefile.am  gmerlin-play.c  gmerlin_play.1
apps/cmdlinerecorder/: Makefile.am  gmerlin-record.1  gmerlin-record.c
apps/controlpanel/: Makefile.am  gmerlin-controlpanel.c
apps/gavftools/: Makefile.am  decode_album.c  decode_albumstream.c  gavf-decode.h  gavf-demux.c  gavf-encode.c  gavf-filter.c  gavf-info.c  gavf-mux.c  gavf-play.c  gavf-play.c.old  gavf-read.c  gavf-recompress.c  gavf-record.c  gavf-server.h  gavf-tee.c  gavf-visualize.c  gavftools.c  gavftools.h  program.c
apps/mdb-tool/: Makefile.am  mdb-tool.c
apps/mediainfo/: Makefile.am  gmerlin-mediainfo.c
apps/player/: Makefile.am  cfgdialog.c  display.c  display.h  gmerlin-player.css  gmerlin.1  gmerlin.c  gmerlin.h  gmerlin_remote.1  gmerlin_remote.c  main.c  mainmenu.c  mainwindow.c  player_remote.h  playerwindow.c  playerwindow.h  remote.c  skin.c  skinbrowser.c
apps/playerproxy/: Makefile.am  gmerlin-playerproxy.c
apps/recorder/: Makefile.am  gmerlin_recorder.c  recorder_window.c
apps/remote/: Makefile.am  gmerlin-remote.c  gmerlin-remote.desktop
apps/renderer/: Makefile.am  gmerlin-renderer.c  gmerlin-renderer.desktop  renderer.c  renderer.h
apps/server/: Makefile.am  gmerlin-server.c  server.c  server.h  server_upnp.c
apps/thumbnailer/: Makefile.am  gmerlin-video-thumbnailer.c
apps/toys/: Makefile.am
apps/transcoder/: Makefile.am  app.c  app.h  gmerlin-transcoder.c  gmerlin-transcoder.desktop  gmerlin_transcoder.1  main.c  mainwindow.c  mainwindow.h  metadata.c  ppwidget.h  trackdialog.c  trackdialog.h  tracklist.c  tracklist.h  transcode.c  transcode.h  transcoder_remote.h  transcoder_window.c  transcoder_window.h
apps/visualizer/: Makefile.am  gmerlin_visualizer.c
doc/: Doxyfile  Makefile.am  README.mdb  dependencies.txt  gmerlin.info  gmerlin.info-1  gmerlin.info-2  gmerlin.texi  gmerlin_transcoder_remote.texi  version.texi
icons/: Makefile.am  icons.xcf.bz2  player_icons.xcf
include/: Makefile.am  backend_priv.h  bgfrei0r.h  bgladspa.h  bglv.h  bgncurses.h  bgsqlite.h  config.h.in  config.h.in~  float_cast.h  frei0r.h  frontend_priv.h  gavfenc.h  glvideo_private.h  httpserver_priv.h  ladspa.h  language_table.h  md5.h  mdb_private.h  mediadb_private.h  msgconn.h  ovl2text.h  playerprivate.h  pluginreg_priv.h  recorder_private.h  registry_priv.h  treeprivate.h  visualize_priv.h
include/gmerlin/: Makefile.am  accelerator.h  application.h  backend.h  bg_sem.h  bgcairo.h  bgdbus.h  bggavl.h  bgmsg.h  bgplug.h  bgsocket.h  bgthread.h  cfg_dialog.h  cfg_registry.h  cfgctx.h  charset.h  cmdline.h  colormatrix.h  converters.h  downloader.h  edl.h  embedplayer.h  encoder.h  filters.h  frametimer.h  frontend.h  glvideo.h  http.h  httpserver.h  iconfont.h  lcdproc.h  log.h  lpcm_handler.h  mdb.h  mediaconnector.h  mediadb.h  msgqueue.h  objectcache.h  ocr.h  osd.h  (+31 more)
include/gui_gtk/: Makefile.am  aboutwindow.h  albumentry.h  audio.h  backendmenu.h  chapterdialog.h  configdialog.h  display.h  driveselect.h  fileentry.h  fileselect.h  gtkutils.h  infowindow.h  logwindow.h  mdb.h  message.h  multiinfo.h  presetmenu.h  question.h  textview.h  tree.h.hide  urlselect.h
include/upnp/: Makefile.am  devicepriv.h  didl.h  event.h  mediarenderer.h  servicepriv.h
include/x11/: x11.h  x11_window_private.h
lib/: Makefile.am  accelerator.c  application.c  audiofilters.c  backend.c  backend_dbus.c  backend_gmerlin.c  backend_mpd.c  backend_mpris2.c  backend_upnp.c  backendregistry.c  base64.c  bgfrei0r.c  bggavl.c  bgladspa.c  bglv.c  bgplug.c  bgplug_io.c  bgshm.c  bgxml.c  cairo.c  cfg_ctx.c  cfg_registry.c  cfg_section.c  cfg_xml.c  cfgctx.c  chapterlist.c  charset.c  cleanup.c  cmdline.c  colormatrix.c  control.c  controllable.c  converters.c  core.c  country_table.c  dbus.c  dbus_detector.c  device.c  downloader.c  (+129 more)
lib/db/: Makefile.am  audio.c  audioalbum.c  db.c  dir.c  file.c  image.c  object.c  playlist.c  root.c  rootfolder.c  scan.c  thumbnail.c  url.c  vfolder.c  video.c  videocontainer.c  videoinfo.c
lib/gtk/: Makefile.am  aboutwindow.c  albumentry.c  auth.c  backendmenu.c  button.c  cfg_button.c  cfg_checkbutton.c  cfg_color.c  cfg_dialog.c  cfg_dirlist.c  cfg_file.c  cfg_font.c  cfg_multi_list.c  cfg_multi_menu.c  cfg_position.c  cfg_slider.c  cfg_spinbutton.c  cfg_string.c  cfg_stringlist.c  cfg_time.c  chapterdialog.c  configdialog.c  dictview.c  display.c  driveselect.c  fileentry.c  fileselect.c  gtk_dialog.h  gtkutils.c  infowindow.c  logwindow.c  mdb_cache.c  mdb_list.c  mdb_private.h  mdb_tree.c  message.c  multiinfo.c  plugin_multi.c  plugininfo.c  (+10 more)
lib/upnp/: Makefile.am  avtransport.c  client.c  connectionmanager.c  contentdirectory.c  device.c  devicedesc.c  didl.c  event.c  eventlistener.c  mediarenderer.c  mediaserver.c  recompressor.c  renderingcontrol.c  service.c  service_action.c  service_event.c  servicedesc.c  servicedesc_xml.c  soap.c  ssdp.c  ssdp_device.c  transcoder.c  upnputils.c
lib/x11/: Makefile.am  glvideo.c  grab.c  icon.c  overlay.c  screensaver.c  shm.c  vaapi.c  x11_event.c  x11_video.c  x11_window.c  ximage.c  xvideo.c
plugins/: Makefile.am
plugins/alsa/: Makefile.am  alsa_common.c  alsa_common.h  i_alsa.c  oa_alsa.c
plugins/audiofilters/: Makefile.am  fa_channels.c  fa_sampleformat.c  fa_samplerate.c  (+1 more)
tests/: Makefile.am  album2m3u.c  album2pls.c  audioplayer1.c  auth.c  cfgtest.c  chapter.c  client.c  dbus  dbus.c  dump_plugins.c  embeddedplayer.c  extractchannel.c  fs_cache.c  fvtest.c  gmerlin-mediadump.c  gmerlin-savemeta.c  gmerlin-upnp-discover.c  gmerlin_imgdiff.c  gmerlin_imgsplit.c  gmerlin_psnr.c  gmerlin_ssim.c  gmerlin_vanalyze.c  gmerlin_visualize.c  gmerlin_vpsnr.c  imgconvert.c  insertchannel.c  ladspa.c  makethumbnail.c  mdb-tree.c  message.c  msgiotest.c  msgtest.c  ocrtest.c  playtree.c  question.c  recordingdevices.c  remotedevreg.c  resource.c  scrolltext.c  (+11 more)
(+208 files in other folders)
