if HAVE_X11
x11_subdirs = x11
else
x11_subdirs =
endif

SUBDIRS=gmerlin gui_gtk upnp $(x11_subdirs)

noinst_HEADERS = \
backend_priv.h \
bgfreetype.h \
bgfrei0r.h \
bglv.h \
bgladspa.h \
bgshm.h \
bgsqlite.h \
float_cast.h \
frei0r.h \
frontend_priv.h \
gavfenc.h \
ladspa.h \
language_table.h \
md5.h \
mdb_private.h \
mediadb_private.h \
ovl2text.h \
playerprivate.h \
recorder_private.h \
registry_priv.h \
treeprivate.h \
pluginreg_priv.h \
visualize_priv.h

