if HAVE_X11
x11_subdirs = x11
else
x11_subdirs =
endif

SUBDIRS=gmerlin gui_gtk $(x11_subdirs)

noinst_HEADERS = \
backend_priv.h \
bgfrei0r.h \
bglv.h \
bgladspa.h \
bgncurses.h \
bgsqlite.h \
frei0r.h \
gavfenc.h \
glvideo_private.h \
httpserver_priv.h \
ladspa.h \
language_table.h \
mdb_private.h \
msgconn.h \
ovl2text.h \
playerprivate.h \
registry_priv.h \
pluginreg_priv.h
