
pkginclude_HEADERS = \
accelerator.h \
application.h \
bg_sem.h \
bg_version.h \
bgcairo.h \
bggavl.h \
bgmsg.h \
bgplug.h \
bgthread.h \
cfg_dialog.h \
cfg_registry.h \
cfgctx.h \
charset.h \
cmdline.h \
colormatrix.h \
encoder.h \
filters.h \
frametimer.h \
frontend.h \
http.h \
httpserver.h \
iconfont.h \
lcdproc.h \
log.h \
lpcm_handler.h \
mediaconnector.h \
ocr.h \
osd.h \
ov.h \
parameter.h \
player.h \
playermsg.h \
plugin.h \
pluginfuncs.h \
pluginregistry.h \
preset.h \
recorder.h \
singlepic.h \
state.h \
streaminfo.h \
subprocess.h \
subtitle.h \
textrenderer.h \
transcoder.h \
transcodermsg.h \
transcoder_track.h \
translation.h \
utils.h \
visualize.h \
volumemanager.h \
websocket.h \
xmlutils.h \
xspf.h

SUBDIRS = upnp

EXTRA_DIST = bg_version.h.in
