
pkginclude_HEADERS = \
accelerator.h \
application.h \
backend.h \
bg_version.h \
bgcairo.h \
bggavl.h \
bgmsg.h \
bgdbus.h \
bgthread.h \
cfg_dialog.h \
cfg_registry.h \
cfgctx.h \
cmdline.h \
colormatrix.h \
downloader.h \
encoder.h \
filters.h \
frametimer.h \
frontend.h \
http.h \
httpserver.h \
iconfont.h \
lcdproc.h \
log.h \
lpcm_handler.h \
mdb.h \
mediaconnector.h \
objectcache.h \
ocr.h \
osd.h \
ov.h \
parameter.h \
player.h \
playermsg.h \
plugin.h \
pluginfuncs.h \
pluginregistry.h \
preset.h \
recorder.h \
resourcemanager.h \
ringbuffer.h \
singlepic.h \
state.h \
streaminfo.h \
subprocess.h \
subtitle.h \
textrenderer.h \
transcoder.h \
transcodermsg.h \
transcoder_track.h \
translation.h \
utils.h \
visualize.h \
volumemanager.h \
websocket.h \
xmlutils.h \
xspf.h

SUBDIRS = upnp

EXTRA_DIST = bg_version.h.in
