pkgincludedir=$(includedir)/gmerlin/gui_gtk

pkginclude_HEADERS =  \
aboutwindow.h \
albumentry.h \
audio.h \
auth.h \
backendmenu.h \
button.h \
multiinfo.h \
chapterdialog.h \
display.h \
fileentry.h \
driveselect.h \
fileselect.h \
gtkutils.h \
infowindow.h \
logwindow.h \
message.h \
plugin.h \
presetmenu.h \
question.h \
slider.h \
textview.h \
urllink.h \
urlselect.h


