pkgincludedir=$(includedir)/gmerlin/gui_gtk

pkginclude_HEADERS =  \
aboutwindow.h \
audio.h \
backendmenu.h \
multiinfo.h \
chapterdialog.h \
display.h \
fileentry.h \
driveselect.h \
fileselect.h \
gtkutils.h \
infowindow.h \
logwindow.h \
message.h \
presetmenu.h \
question.h \
textview.h \
urlselect.h


